<resources>
    <string name="app_name">Delivery Boy- Kepler</string>

    <!-- delivery indexes-->

    <string name="pickupIndex">Picked up</string>
    <string name="placedIndex">Placed</string>
    <string name="deliveredIndex">Delivered</string>


    <!-- order details -->

    <string name="CustomerName">Customer Name : </string>
    <string name="phoneNumber">Phone Number : </string>
    <string name="paymentMethod">Payment Method : </string>
    <string name="Hotel">Hotel : </string>
    <string name="Dish">Dishes : </string>
    <string name="Quantity">Quantity : </string>
    <string name="price">Total Price : </string>
    <string name="time">Time Ordered:</string>
    <string name="houseNo">House No : </string>
    <string name="houseName">House Name : </string>
    <string name="landmark">Landmark : </string>
    <string name="street">Street : </string>
    <string name="date">Date : </string>

    <!-- Dish Details -->

    <string name="DishNameHead">Dish Name :</string>
    <string name="DishQuantityHead">Quantity :</string>
    <string name="DishPriceHead">Price :</string>

    <!-- ShreadPreference File name -->
    <string name="DeliveryBoyPreference">DeliveryBoyPreferences</string>


    <!-- Database nodes and Indexes-->

    <string name="foodNode">Food</string>
    <string name="DishNode">Dishes</string>
    <string name="OrderNode">Orders</string>
    <string name="HotelNode">Hotels</string>
    <string name="placedIndexStatus">placedIndex</string>
    <string name="pickupIndexStatus">pickupIndex</string>
    <string name="deliveryIndexStatus">deliveryIndex</string>
    <string name="DeliveryBoyNode">DeliveryBoy</string>
    <string name="assignedIndex">assigned</string>

    <!-- AlertDialog Box Texts -->
    <string name="orderStatus">Orders Are Being Loaded Please Wait !!!</string>
    <string name="AnonymousSignInStatus">Signing In ..Please Wait !!!</string>
    <string name="orderDisplayStatus">The Details are being Fetched .. Please wait !!!</string>
    <string name="this_is_the_order_name">this is the order name</string>
    <string name="_3847837849">3847837849</string>
    <string name="address">Address</string>
    <string name="direction">Direction</string>
    <string name="order_details">Order Details</string>
</resources>