<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:id="@+id/orderCardView"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/orderName"
                android:text="this is the order name"
                android:textSize="28sp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/orderPhoneNumber"
                android:layout_below="@id/orderName"
                android:layout_marginTop="10dp"
                android:text="3847837849"
                android:textSize="24sp"
                />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/orderName"
                android:layout_marginTop="10dp"
                android:id="@+id/openLocation"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_baseline_location_on_24"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/orderPhoneNumber"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/orderPlaced"
                    android:layout_marginTop="10dp"
                    android:text="@string/pickupIndex"
                    android:textSize="24sp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/orderPicked"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/placedIndex"
                    android:textSize="24sp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/orderDelivered"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/deliveredIndex"
                    android:textSize="24sp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    />



            </LinearLayout>


        </RelativeLayout>



    </androidx.cardview.widget.CardView>

</RelativeLayout>